styles/_base.scss
@font-face {
  font-family: 'noto_sans';
  src: url('../../fonts/NotoSans-Regular-webfont.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'noto_sans';
  src: url('../../fonts/NotoSans-Bold-webfont.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'noto_sans';
  src: url('../../fonts/NotoSans-Italic-webfont.ttf') format('truetype');
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: 'noto_sans';
  src: url('../../fonts/NotoSans-BoldItalic-webfont.ttf') format('truetype');
  font-weight: bold;
  font-style: italic;
}

html {
  // fonts
  color: $text;
  font: {
    family: "noto_sans";
    size: $baseFontSize;
    weight: 400;
  }
  -webkit-font-smoothing: antialiased;
  letter-spacing: 0;
  line-height: 1.2;
}

body {
  overflow: hidden;
  margin: 0;
}

a {
  text-decoration: none;
  cursor: pointer;
  -webkit-user-drag: none;
  transition: color .15s  cubic-bezier(0, 0, 0.2, 1);
  color: inherit;

  &:hover,
  &:focus {
    text-decoration: underline;
  }

  &.link {
    text-decoration: underline;
  }
}

hr {
  border: none;
  border-bottom: 1px solid;
  -webkit-margin-before: 0.5em;
  -webkit-margin-after: 0.5em;

  &.unleaded {
    -webkit-margin-before: 0;
    -webkit-margin-after: 0;
  }

  &.dashed {
    border-bottom: 1px dashed;
  }
}

ul {
  margin: 0;
}

ul, ol {
  &.unstyled {
    padding: 0;

    li {
      list-style-type: none;
    }
  }
}

.bkgContain {
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  background-position-y: 0;
}

.bkgCover {
  background-size: cover;
  background-repeat: no-repeat;
}

#appFrame {
  position: absolute;
  height: 100%;
  width: 100%;

  // index containers and sections
  #pageNavContainer {
    position: relative;
    z-index: 3;
  }

  #contentFrame {
    padding-top: $barLg;
    overflow-y: scroll;
    height: calc(100% - #{$bar});
    box-sizing: border-box;
    z-index: 0;

    #pageTabBar {
      position: fixed;
      top: $bar;
      left: 0;
      z-index: 1;
      width: 100%;
      height: $barLg;
      border-bottom-width: 1px;
      border-bottom-style: solid;

      .pageTabs {
        max-width: $pageWidth;
        margin: 0 auto;

        .userIcon {
          border-width: 2px;
          border-style: solid;
          width: 44px;
          height: 44px;
          margin-right: $pad;
        }

        .tab {
          border-radius: 0;
          box-sizing: content-box;
          font-size: $tx4;

          &.active {
            border-bottom-width: 1px;
            border-bottom-style: solid;
          }
        }
      }
    }

    #pageContainer {

      .pageContent {
        width: $pageWidth + $padLg + $padLg;
        box-sizing: border-box;
        margin: 0 calc((100% - #{$pageWidth + $padLg + $padLg}) / 2) 0 auto;
        padding: 0 $padLg $bar $padLg;
        position: relative;
        @include chatOpeningTransition(margin);

        @include alignToChat {

          .chatOpen & {
            margin-right: $chatOpen;
          }
        }
      }
    }
  }

  #chatContainer {
    position: fixed;
    top: 105px;
    right: $scrollbar; // don't cover scroll bars
    width: $chatClosed;
    height: calc(100% - 100px);
    z-index: 2; // chat needs to be on top of modals
    @include chatOpeningTransition(width);
    overflow-y: auto;
    overflow-x: hidden;

    &::-webkit-scrollbar {
      width: 0;
    }

    &:hover {
      right: 0;
      padding-right: $scrollbar;

      &::-webkit-scrollbar {
        width: $scrollbar;
      }
    }

    .chatOpen & {
      width: $chatOpen;
    }

    .chatWrapper {
      justify-content: flex-start;
      padding: $padSm $padSm $padSm 0;
    }
  }
}

// turn off animations and transitions with this style

#ov1.minEffects,
#ov1.minEffects *,
#ov1.minEffects #overlay,
#ov1.minEffects #pageNav,
#ov1.minEffects #statusBar {
  transition: none !important;
  -webkit-filter: none !important;
  opacity: 1 !important;
  transition-property: none !important;
  animation: none !important;
  box-shadow: none !important;
  text-shadow: none !important;
}

// utility classes

#ov1 .hide {
  display: none;
}

#ov1 .disabled {
  @include disabled;
}

.overflowAuto {
  overflow: auto;
}

.floL {
  float: left;
}

.floR {
  float: right;
}

.preWrap {
  white-space: pre-wrap;
}

